fix wrong height at container size

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -63,7 +63,9 @@
         color: variables.$very-dark-cyan
 
 @media (min-width: 769px) 
-   
+    .container
+        height: 100vh
+        
     .wrapper
         grid-template-columns: repeat(3, 1fr)
         max-width: 1040px
